coder-ingress-dcflash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder-ingress-dcflash
  namespace: coder
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
#    kubernetes.io/tls-acme: "true"
spec:
  rules:
#  - host: coder.xcitelab.org
  - host: dcflash.asrc.albany.edu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: coder
            port:
              number: 80
  tls:
    - hosts:
#      - coder.xcitelab.org
#      secretName: coder-tls
      - dcflash.asrc.albany.edu
      secretName: secret-tls-dcflash
---
